# crossvision

./: .gitignore  README.md  gradle.properties  local.properties  settings.gradle.kts
.qwen/: settings.json
OCR/: README.md  使用可能文字.md
OCR/cclog/: OCR-BBox-14枚に対しての検出.md  OCR-BBox-検出精度検証.md  OCR-BBox-検出精度検証2.md  OCR-BBox-検出精度検証3.md  OCR-BBox-検出精度検証4.md  OCR-BBox-検出精度検証5.md  OCR-BBox-角度検出.md  OCR検証準備.md
OCR/images/: 正解ラベル.csv
OCR/models/v3-custom-dict/: custom_dict.txt
OCR/results/: M4sb29-2_detection_angle.json  M4sb29-2_full_pipeline.json  eval_results.json
OCR/results/batch_full_pipeline/: 015_B15b30N-41__B15b30N-7A_45deg_NW_yellow_full_pipeline.json  IMG20250416153020_full_pipeline.json  IMG20250416160821_full_pipeline.json  _summary.json  (+12 more)
OCR/scripts/: PaddleOCR2-by-nogami.py  batch_full_pipeline.py  batch_full_pipeline2.py  batch_full_pipeline3.py  figurecolor_test.ipynb  ocr_eval.py  verify_detection_angle.py  verify_full_pipeline.py
OCR/src/: OnnxTestActivity.kt
app/: build.gradle  build.gradle.kts
app/release/: output-metadata.json
app/src/main/cpp/: CMakeLists.txt  onnx_ocr_engine.cpp
docs/: 2026-04-22_ONNX_Runtime_Android_PoC_実装レポート.md  2026-04-24_ONNX_PaddleOCR_Android_Emulator_Troubleshooting.md  2026-04-24_ONNX_PaddleOCR_Android_integration_debug_report.md  2026-04-24_PaddleOCR_ONNX_Android_環境別導入ガイド.md  2026-04-24_高精度モデル検証結果.md  PaddleOCR_PP-OCRv4_v5_英語認識モデルのONNX変換と_Android_組み込みリサーチ.md  onnx-poc-progress-2026-04-21-2051.md  onnx-poc-progress.md  onnx-poc.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+85 files in other folders)
